--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showphysios.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showphysios.html
@@ -43,6 +43,7 @@
 		}
 	</style>
 	<script>
+	document.addEventListener("DOMContentLoaded", function() {
 		function filterPhysios() {
 			var input = document.getElementById("physioFilter");
 			var filter = input.value.toUpperCase();
@@ -65,6 +66,32 @@
 				}
 			}
 		}
+		var errorMessage = document.querySelector('.error-message');
+        var successMessage = document.querySelector('.alert-success');
+
+        // Mostrar el mensaje de error si tiene texto
+        if (errorMessage && errorMessage.textContent.trim() !== '') {
+            errorMessage.style.display = 'block';
+        }
+
+        // Mostrar el mensaje de éxito si tiene texto
+        if (successMessage && successMessage.textContent.trim() !== '') {
+            successMessage.style.display = 'block';
+        }
+
+        // Ocultar los mensajes después de 5 segundos
+        setTimeout(function () {
+            if (errorMessage) {
+                errorMessage.style.display = 'none';
+            }
+            if (successMessage) {
+                successMessage.style.display = 'none';
+            }
+        }, 5000);
+        // Añadir evento de filtrado
+        document.getElementById("physioFilter").addEventListener("keyup", filterPhysios);
+        document.getElementById("teamFilter").addEventListener("change", filterPhysios);
+    });
 	</script>
 </head>
 
@@ -91,6 +118,12 @@
 		<div class="content-wrapper">
 			<div class="row">
 				<div class="col">
+					<div th:if="${success}" class="alert alert-success" role="alert">
+						<span th:text="${success}"></span>
+					</div>
+					<div th:if="${error}" class="error-message alert alert-danger" role="alert">
+						<p th:text="${error}"></p>
+					</div>
 					<h2 style="text-align: center;">All Physios</h2>
 					<br>
 					<div class="row align-items-center">
@@ -124,7 +157,9 @@
 									th:text="${team.name}">Physio Team</td>
 								<td>
 									<i class="fa fa-wrench"></i>
-									<i class="fa fa-trash"></i>
+									<a class="fa fa-trash"
+										th:href="@{/adminedit/deletePhysio/{id}(id=${physio.id_physio})}"
+										th:onclick="return confirm('¿Are you sure you want to delete this physio?');"></a>
 								</td>
 							</tr>
 						</tbody>
