--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showmatchs.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showmatchs.html
@@ -43,6 +43,7 @@
 		}
 	</style>
 	<script>
+		document.addEventListener("DOMContentLoaded", function() {
     function filterMatchs() {
         var teamFilter = document.getElementById("teamFilter");
         var selectedTeamId = teamFilter.value.toUpperCase();
@@ -64,6 +65,30 @@
 				}
         }
     }
+    var errorMessage = document.querySelector('.error-message');
+	        var successMessage = document.querySelector('.alert-success');
+	
+	        // Mostrar el mensaje de error si tiene texto
+	        if (errorMessage && errorMessage.textContent.trim() !== '') {
+	            errorMessage.style.display = 'block';
+	        }
+	
+	        // Mostrar el mensaje de éxito si tiene texto
+	        if (successMessage && successMessage.textContent.trim() !== '') {
+	            successMessage.style.display = 'block';
+	        }
+	
+	        // Ocultar los mensajes después de 5 segundos
+	        setTimeout(function () {
+	            if (errorMessage) {
+	                errorMessage.style.display = 'none';
+	            }
+	            if (successMessage) {
+	                successMessage.style.display = 'none';
+	            }
+	        }, 5000);
+	        document.getElementById("teamFilter").addEventListener("change", filterPhysios);
+    });
 </script>
 
 </head>
@@ -91,6 +116,12 @@
 		<div class="content-wrapper">
 			<div class="row">
 				<div class="col">
+					<div th:if="${success}" class="alert alert-success" role="alert">
+						<span th:text="${success}"></span>
+					</div>
+					<div th:if="${error}" class="error-message alert alert-danger" role="alert">
+						<p th:text="${error}"></p>
+					</div>
 					<h2 style="text-align: center;">All Matches</h2>
 					<br>
 					<div class="row align-items-center">	
@@ -130,7 +161,9 @@
 								<td th:text="${match.tickets}">Tickets</td>
 								<td>
 									<i class="fa fa-wrench"></i>
-									<i class="fa fa-trash"></i>
+									<a class="fa fa-trash"
+										th:href="@{/adminedit/deleteMatch/{id}(id=${match.id_game})}"
+										th:onclick="return confirm('¿Are you sure you want to delete this match?');"></a>
 								</td>
 							</tr>
 						</tbody>
