--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
@@ -41,6 +41,7 @@
 		}
 	</style>
 	<script>
+		document.addEventListener("DOMContentLoaded", function() {
 		function filterUsers() {
 			var input, filter, table, tr, td, i, txtValue;
 			input = document.getElementById("userFilter");
@@ -62,6 +63,32 @@
 				}
 			}
 		}
+		var errorMessage = document.querySelector('.error-message');
+        var successMessage = document.querySelector('.alert-success');
+
+        // Mostrar el mensaje de error si tiene texto
+        if (errorMessage && errorMessage.textContent.trim() !== '') {
+            errorMessage.style.display = 'block';
+        }
+
+        // Mostrar el mensaje de éxito si tiene texto
+        if (successMessage && successMessage.textContent.trim() !== '') {
+            successMessage.style.display = 'block';
+        }
+
+        // Ocultar los mensajes después de 5 segundos
+        setTimeout(function () {
+            if (errorMessage) {
+                errorMessage.style.display = 'none';
+            }
+            if (successMessage) {
+                successMessage.style.display = 'none';
+            }
+        }, 5000);
+        // Añadir evento de filtrado
+        document.getElementById("userFilter").addEventListener("keyup", filterUsers);
+        document.getElementById("teamFilter").addEventListener("change", filterUsers);
+    });
 	</script>
 </head>
 
@@ -88,6 +115,12 @@
 		<div class="content-wrapper">
 			<div class="row">
 				<div class="col">
+					<div th:if="${success}" class="alert alert-success" role="alert">
+						<span th:text="${success}"></span>
+					</div>
+					<div th:if="${error}" class="error-message alert alert-danger" role="alert">
+						<p th:text="${error}"></p>
+					</div>
 					<h2 style="text-align: center;">All Users</h2>
 					<br>
 					<div class="row align-items-center">
@@ -121,7 +154,10 @@
 									th:text="${team.name}">Team ID</td>
 								<td>
 									<i class="fa fa-wrench"></i>
-									<i class="fa fa-trash"></i>
+									<a class="fa fa-trash"
+										th:href="@{/adminedit/deleteUser/{id}(id=${user.id_user})}"
+										th:onclick="return confirm('¿Are you sure you want to delete this user?');"></a>
+								
 								</td>
 							</tr>
 						</tbody>
