--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registerteam.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registerteam.html
@@ -104,7 +104,7 @@
 					<div class="form-label-group">
 						<label for="id_president"><strong>Presidente:</strong></label>
 						<select style="margin-top: 1%;" class="form-control" id="id_president" name="id_president">
-							<option th:field="*{id_president}" th:each="c : ${presidents}" th:value="${c.id_president}"
+							<option th:field="*{IdPresident}" th:each="c : ${presidents}" th:if="${c.idteampresident} == ${idpresidentAgenteLibre} and ${c.name} != 'Null'" th:value="${c.id_president}"
 								th:text="${c.name}">Equipo</option>
 						</select>
 					</div>
@@ -117,7 +117,7 @@
 					<div class="form-label-group">
 						<label for="id_coach"><strong>Entrenador:</strong></label>
 						<select style="margin-top: 1%;" class="form-control" id="id_coach" name="id_coach">
-							<option th:field="*{id_coach}" th:each="c : ${coachs}" th:value="${c.id_coach}"
+							<option th:field="*{idCoach}" th:each="c : ${coachs}" th:if="${c.idteamcoach} == ${idcoachAgenteLibre} and ${c.name} != 'Null'" th:value="${c.id_coach}"
 								th:text="${c.name}">Equipo</option>
 						</select>
 					</div>
